# advent

./: .gitignore  README.md  project.clj
2017/: .gitignore  pyproject.toml
2017/solutions2017/: 23.notes  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  knothash.py  run.py
2017/solutions2017/lib/: __init__.py  hexd.py  threed.py  twod.py
2021/AdventOfCode2021.playground/: contents.xcplayground
2022/: template.py
2022/day1/: day1.py
2022/day10/: day10.py
2022/day11/: day11.py
2022/day12/: day12.py
2022/day13/: day13.py
2022/day14/: day14.py
2022/day15/: day15.py
2022/day16/: day16.py
2022/day17/: day17.py
2022/day18/: day18.py
2022/day19/: day19.py
2022/day2/: day2.py
2022/day20/: day20.py
2022/day21/: day21.py
2022/day22/: day22.py
2022/day23/: day23.py
2022/day24/: day24.py
2022/day25/: day25.py
2023/: .gitignore  pyproject.toml
2023/solutions2023/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  run.py  template.py
2023/solutions2023/lib/: __init__.py  input.py  priorityqueue.py  runner.py  threed.py  twod.py  utils.py  walk.py
2024/: pyproject.toml
2024/advent/: run.py  template.py
2024/advent/lib/: __init__.py  binary_search.py  djikstras.py  input.py  parsers.py  priorityqueue.py  ranges.py  runner.py  sparse_grid.py  system_of_equations.py  twod.py  utils.py  walk.py
2024/solutions/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
(+92 files in other folders)
