[tool.poetry]
name = "advent-2023"
version = "0.1.0"
description = "Advent of code 2023"
authors = ["Jon Eisen"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "solutions2023" }
]


[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.25.1"
parsita = "^2.1.1"
tqdm = "^4.66.1"
numpy = "^1.26.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
template.script = "solutions2023.template:main"
run.script = "solutions2023.run:main"
