[tool.poetry]
name = "advent-2024"
version = "0.1.0"
description = "Advent of Code 2024"
authors = ["Jon Eisen <jon.m.eisen@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
  { include = "advent" },
  { include = "solutions" }
]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.0"
parsita = "^2.2.1"
tqdm = "^4.67.1"
numpy = "^2.1.3"
scipy = "^1.14.1"
sympy = "^1.13.3"
networkx = "^3.4.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.30.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
advent-template = "advent.template:main"
advent = "advent.run:main"